--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.4",
+    "qrcode.vue": "^3.8.0",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
   },
