--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "qrcode.vue": "^3.8.0",
     "vue": "^3.5.27",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^5.0.1"
   },
   "devDependencies": {
