--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "qrcode.vue": "^3.8.0",
